# Project-Hestia

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  config.yaml.example  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
docs/: MODULE_AUTHORING.md  PLAN.md  SECURITY_ARCHITECTURE.md
docs/plan/: CHANGELOG.md
hestia/: __init__.py  config.py  main.py
hestia/api/: app.py
hestia/api/routes/: chat.py  echo.py  health.py
hestia/core/: mnemosyne.py  orchestrator.py
hestia/core/llm/: base.py  errors.py  ollama.py
hestia/core/tools/: models.py  policy.py  registry.py
hestia/interfaces/echo/: __init__.py  service.py
hestia/interfaces/pythia/: index.html  package-lock.json  package.json  vite.config.ts
hestia/interfaces/pythia/src/: App.css  App.tsx  index.css
hestia/interfaces/pythia/src/api/: client.test.ts  client.ts
hestia/interfaces/pythia/src/components/: ChatWindow.tsx  MessageInput.tsx  SettingsModal.tsx  VoiceControls.tsx
hestia/interfaces/pythia/src/hooks/: useChat.ts
hestia/modules/: base.py  loader.py
hestia/modules/kairos/: __init__.py  module.py
hestia/modules/zephyrus/: __init__.py  module.py
hestia/security/: auth.py  errors.py  http.py  logging.py  middleware.py  rate_limit.py  redact.py
tests/: conftest.py  test_auth.py  test_chat.py  test_config.py  test_echo.py  test_echo_service.py  test_health.py  test_loader.py  test_main.py  test_mnemosyne.py  test_module_contracts.py  test_ollama.py  test_orchestrator.py  test_secure_http.py  test_security.py  test_tool_registry.py
tests/modules/: test_kairos.py  test_zephyrus.py
