[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hestia"
version = "0.1.0"
description = "Local-first home assistant AI with modular Greek-named capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "jsonschema",
    "icalendar",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.0.0",
    "ruff",
    "mypy",
    "types-PyYAML",
    "types-jsonschema",
]

[project.scripts]
hestia = "hestia.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hestia*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
